Fix menu item alignment off center

--- a/src/main/resources/scss/debris/_menu-items.scss
+++ b/src/main/resources/scss/debris/_menu-items.scss
@@ -84,6 +84,8 @@ label.x-menu-item-cmp {
 	margin: 0 !important;
 	cursor: pointer;
 	overflow: hidden;
+	display: flex;
+	align-items: center;
 
 	@include ellipse;
 
